--- a/src/shared/Grid/Grid.scss
+++ b/src/shared/Grid/Grid.scss
@@ -1,6 +1,7 @@
 table,
 td,
 th {
+
     border: 1px solid #dfdfdf;
     border-radius: 4px;
     border-collapse: collapse;
@@ -14,6 +15,7 @@ th {
         border-right: 1px solid #dfdfdf;
     }
 }
-//table {
-//    border-radius: 4px;
-//}
+table {
+    //border-radius: 4px;
+    width: 100%;
+}
